# cfd-rs

./: .debtmap.toml  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FINAL_PHASE.md  FINAL_PLAN.md  Justfile  README.md  REWRITE_CHARTER.md  SKILLS.md  STATUS.md  rustfmt.toml
.cargo/: config.toml
crates/cfdrs-bin/: Cargo.toml  README.md
crates/cfdrs-bin/src/: access_commands.rs  api_client.rs  main.rs  main_tests.rs  protocol.rs  route_vnet_commands.rs  tail_management.rs  tunnel_commands.rs  tunnel_local_commands.rs  tunnel_login.rs
crates/cfdrs-bin/src/proxy/: mod.rs  origin.rs  tests.rs
crates/cfdrs-bin/src/runtime/: deployment.rs  logging.rs  management.rs  metrics.rs  mod.rs  types.rs
crates/cfdrs-bin/src/runtime/command_dispatch/: handlers.rs  mod.rs
crates/cfdrs-bin/src/runtime/state/: deployment_contract.rs  deployment_evidence.rs  failure.rs  mod.rs  readiness.rs  status.rs  status_recording.rs  timing.rs
crates/cfdrs-bin/src/runtime/tasks/: autoupdate.rs  bridges.rs  drain.rs  mod.rs  watcher.rs
crates/cfdrs-bin/src/runtime/tests/: compliance.rs  deployment.rs  failure_recovery.rs  fixtures.rs  harness.rs  lifecycle_primary.rs  lifecycle_proxy.rs  malformed_input.rs  mod.rs  performance.rs  updater.rs
crates/cfdrs-bin/src/startup/: mod.rs  render.rs  resolve.rs  runtime_overrides.rs
crates/cfdrs-bin/src/transport/: mod.rs
crates/cfdrs-bin/src/transport/quic/: datagram.rs  edge.rs  identity.rs  lifecycle.rs  mod.rs  reporting.rs  session.rs  tests.rs
crates/cfdrs-bin/tests/: cli_surface.rs
crates/cfdrs-cdc/: Cargo.toml  README.md  build.rs
crates/cfdrs-cdc/src/: api.rs  api_resources.rs  datagram.rs  edge.rs  features.rs  lib.rs  log_streaming.rs  management.rs  protocol.rs  registration.rs  registration_codec.rs  rpc_dispatch.rs  stream.rs  stream_codec.rs  stream_contract.rs
crates/cfdrs-his/: Cargo.toml  README.md
crates/cfdrs-his/src/: credentials.rs  diagnostics.rs  discovery.rs  environment.rs  hello.rs  icmp.rs  lib.rs  logging.rs  metrics_server.rs  process.rs  signal.rs  updater.rs  watcher.rs
crates/cfdrs-his/src/diagnostics/: bundle.rs  http.rs  network.rs  system.rs
crates/cfdrs-his/src/service/: mod.rs  systemd.rs  sysv.rs
crates/cfdrs-his/src/signal/: grace_period.rs  mod.rs  pidfile.rs  token_lock.rs
crates/cfdrs-his/src/updater/: mod.rs  tests.rs
crates/cfdrs-shared/: Cargo.toml  README.md
crates/cfdrs-shared/examples/: first_slice_emit.rs  shared_behavior_emit.rs
crates/cfdrs-shared/src/: lib.rs
crates/cfdrs-shared/src/artifact/: convert.rs
crates/cfdrs-shared/src/artifact/envelope/: failure_reports.rs  mod.rs
crates/cfdrs-shared/src/artifact/types/: payload.rs  plan.rs
crates/cfdrs-shared/src/config/: config_source.rs  discovery.rs  error.rs  logging.rs  mod.rs  normalized.rs  raw_config.rs
crates/cfdrs-shared/src/config/credentials/: mod.rs  tests.rs
crates/cfdrs-shared/src/config/ingress/: flag_surface.rs  mod.rs  service_parser.rs  tests.rs  types.rs  validation.rs
crates/cfdrs-shared/tests/: README.md  config_loading_parity.rs  credentials_parity.rs  ingress_parity.rs  parity_harness_inventory.rs  phase_1a_parity_scaffold.rs  phase_1b2_config_loading.rs  phase_1b3_credentials.rs  phase_1b4_ingress.rs  shared_behavior_compare.rs  shared_behavior_inventory.rs
crates/cfdrs-shared/tests/fixtures/first-slice/: README.md  fixture-index.toml
crates/cfdrs-shared/tests/fixtures/shared-behavior/: README.md  fixture-index.toml
crates/cfdrs-shared/tests/support/: fixture_index.rs  mod.rs  paths.rs
crates/cloudflared-cli/: Cargo.toml
crates/cloudflared-cli/src/: app.rs  cli.rs  main.rs  output.rs  protocol.rs  proxy.rs  runtime.rs  startup.rs  transport.rs
crates/cloudflared-cli/src/proxy/: mod.rs  origin.rs  tests.rs
crates/cloudflared-cli/src/runtime/: command_dispatch.rs  deployment.rs  mod.rs  tasks.rs  tests.rs  types.rs
crates/cloudflared-cli/src/runtime/command_dispatch/: handlers.rs
crates/cloudflared-cli/src/runtime/state/: deployment_evidence.rs  failure.rs  mod.rs  operability.rs  readiness.rs  status.rs  timing.rs
crates/cloudflared-cli/src/runtime/tasks/: bridges.rs  drain.rs  mod.rs
crates/cloudflared-cli/src/runtime/tests/: compliance.rs  deployment.rs  fixtures.rs  harness.rs  lifecycle_primary.rs  lifecycle_proxy.rs  malformed_input.rs  mod.rs  performance.rs
crates/cloudflared-cli/src/startup/: mod.rs  render.rs  resolve.rs
crates/cloudflared-cli/src/surface/: error.rs  execute.rs  help.rs  mod.rs  parse.rs  types.rs
crates/cloudflared-cli/src/transport/: mod.rs  quic.rs
crates/cloudflared-cli/src/transport/quic/: edge.rs  identity.rs  lifecycle.rs  mod.rs  session.rs  tests.rs
crates/cloudflared-cli/tests/: cli_surface.rs
crates/cloudflared-config/: Cargo.toml
crates/cloudflared-config/examples/: first_slice_emit.rs
crates/cloudflared-config/src/: artifact.rs  credentials.rs  discovery.rs  error.rs  ingress.rs  lib.rs  normalized.rs  raw_config.rs
crates/cloudflared-config/src/artifact/: convert.rs  envelope.rs  mod.rs  types.rs
crates/cloudflared-config/src/artifact/envelope/: failure_reports.rs  mod.rs
crates/cloudflared-config/src/credentials/: mod.rs  tests.rs
crates/cloudflared-config/src/ingress/: flag_surface.rs  matching.rs  mod.rs  origin_request.rs  service_parser.rs  tests.rs  types.rs  validation.rs
crates/cloudflared-config/tests/: README.md  parity_harness_inventory.rs  phase_1a_parity_scaffold.rs  phase_1b2_config_loading.rs  phase_1b3_credentials.rs  phase_1b4_ingress.rs
crates/cloudflared-config/tests/support/: mod.rs
tools/mcp-cfd-rs/: Cargo.toml
tools/mcp-cfd-rs/src/: context.rs  debtmap.rs  fs.rs  log.rs  main.rs  phase5.rs  profile.rs  repo.rs  search.rs  server.rs  workspace.rs
tools/mcp-cfd-rs/src/cogload/: analysis.rs  collection.rs  mod.rs  queries.rs  scoring.rs  types.rs  unified.rs
tools/mcp-cfd-rs/src/phase5/: helpers.rs  ledger.rs  roadmap.rs  sorting.rs  source_map.rs  text.rs
tools/mcp-cfd-rs/src/server/: context_tools.rs  debtmap_tools.rs  phase5_tools.rs  search_tools.rs
(+180 files in other folders)
