[workspace]
members = [
  "crates/cloudflared-cli",
  "crates/cloudflared-config",
  "crates/cloudflared-core",
  "crates/cloudflared-proto",
  "tools/mcp-cfd-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.94.0"
version = "2026.2.0-alpha.202603"

[workspace.dependencies]
mimalloc = { version = "0.1", default-features = false, features = [
  "extended",
  "local_dynamic_tls",
  "no_thp",
  "override",
] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
