[workspace]
members = [
  "crates/cloudflared-cli",
  "crates/cloudflared-config",
  "crates/cloudflared-core",
  "crates/cloudflared-proto",
  "tools/mcp-cfd-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.94.0"
version = "2026.2.0-alpha.202603"

[workspace.dependencies]
mimalloc = { version = "0.1.48", default-features = false, features = [
  "extended",
  "local_dynamic_tls",
  "no_thp",
  "override",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = [
  "fs",
  "io-std",
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", default-features = false, features = ["serde", "std", "v4", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
