[workspace]
members = [
  "crates/cfdrs-bin",
  "crates/cfdrs-cdc",
  "crates/cfdrs-cli",
  "crates/cfdrs-his",
  "crates/cfdrs-shared",
  "tools/mcp-cfd-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.94.0"
version = "2026.2.0-alpha.202603"

[workspace.dependencies]
# monorepo dependencies
cfdrs-cdc = { path = "crates/cfdrs-cdc" }
cfdrs-cli = { path = "crates/cfdrs-cli" }
cfdrs-his = { path = "crates/cfdrs-his" }
cfdrs-shared = { path = "crates/cfdrs-shared" }
# crates.io dependencies
base64 = "0.22.1"
capnp = "0.25.2"
capnpc = "0.25.0"
mimalloc = { version = "0.1.48", default-features = false, features = [
  "extended",
  "local_dynamic_tls",
  "no_thp",
  "override",
] }
openssl = { version = "0.10.76", features = ["vendored"] }
pem = "3.0.6"
pingora-http = "0.8"
quiche = { version = "0.26.1", default-features = false, features = ["boringssl-vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
serde_yaml = "0.9.34-deprecated"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
  "fs",
  "io-std",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "json"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", default-features = false, features = ["serde", "std", "v4", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
