[package]
edition.workspace = true
license.workspace = true
name = "cfdrs-cdc"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capnp.workspace = true
serde.workspace = true
uuid.workspace = true

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
