[package]
edition.workspace = true
license.workspace = true
name = "cfdrs-cdc"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
capnp.workspace = true
capnp-futures.workspace = true
capnp-rpc.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
