[package]
edition.workspace = true
license.workspace = true
name = "cfdrs-his"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cfdrs-shared = { path = "../cfdrs-shared" }
notify.workspace = true
reqwest.workspace = true
sd-notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zip.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
