[package]
edition.workspace = true
license.workspace = true
name = "cfdrs-shared"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
pem.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
cfdrs-his = { path = "../cfdrs-his" }

[lints]
workspace = true
