[package]
edition.workspace = true
license.workspace = true
name = "cloudflared-cli"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cloudflared-config = { path = "../cloudflared-config" }
mimalloc.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[[bin]]
name = "cloudflared"
path = "src/main.rs"
