[package]
edition.workspace = true
license.workspace = true
name = "cloudflared-cli"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cloudflared-config.workspace = true
mimalloc.workspace = true
pingora-http.workspace = true
quiche.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[[bin]]
name = "cloudflared"
path = "src/main.rs"
