[package]
edition.workspace = true
license.workspace = true
name = "cloudflared-config"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pem.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
