[package]
edition.workspace = true
license.workspace = true
name = "cfd-rs-memory"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
debtmap = { version = "0.15.1", default-features = false }
mimalloc.workspace = true
regex = "1.11"
rmcp = { version = "1.1.1", features = ["schemars", "server", "transport-io"] }
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
